Create Hotel/Country models + DbContext

--- a/HotelListing/appsettings.json
+++ b/HotelListing/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "defaultConnection": "server=(localdb)\\mssqllocaldb; database=HotelListing; integrated security=true"
+  },
   "AllowedHosts": "*"
 }
